팝업 창 연결 수정.
팝업창 - 서버 연결

--- a/assets/html/receiver_address_popup.html
+++ b/assets/html/receiver_address_popup.html
@@ -7,9 +7,9 @@
 	<body>
 
 		<!-- Address Form -->
-			&nbsp;&nbsp; <img src="images/gold-d.png" width="17px"/> &nbsp;
-			<input type="text" style="width:50%"> <button type="button"> 검색</button><br/>
-			<hr>
+			&nbsp;&nbsp; <img src="/assets/images/silver-d.png" width="17px"/>&nbsp;
+            <input type="text" style="width:50%"> <button type="button"> 검색</button><br/>
+            <hr>
 
 	</body>
 </html>
