--- a/assets/html/receiver_address_popup.html
+++ b/assets/html/receiver_address_popup.html
@@ -10,28 +10,20 @@
 
     </head>
     <body>
-
-        <!-- Address Form -->
-        &nbsp;&nbsp;
-        <img src="/assets/images/silver-d.png" width="17px"/>&nbsp;
-        <input type="text" id="receiver_name" style="width:50%">
-        <button type="button" id="receiver_btn">
-            검색</button><br/>
+        <div class="css-search">
+            <!-- Address Form -->
+            <img src="/assets/images/silver-d.png" width="17px" id="img-receiver">
+            <form onsubmit="searchPlaces(); return false;">
+                <input type="text" id="keyword" value="제주대학교" size="60" style="width:50%">
+                <button type="submit" id="receiver_btn">검색</button>
+            </form>
+        </div>
         <hr>
 
         <div class="map_wrap">
             <div id="map" style="width:100%;height:100%;position:relative;overflow:hidden;"></div>
 
             <div id="menu_wrap" class="bg_white">
-                <div class="option">
-                    <div>
-                        <form onsubmit="searchPlaces(); return false;">
-                            키워드 :
-                            <input type="text" value="이태원 맛집" id="keyword" size="15">
-                            <button type="submit">검색하기</button>
-                        </form>
-                    </div>
-                </div>
                 <hr>
                 <ul id="placesList"></ul>
                 <div id="pagination"></div>
