--- a/assets/html/receiver_address_popup.html
+++ b/assets/html/receiver_address_popup.html
@@ -12,10 +12,11 @@
     <body>
         <div class="css-search">
             <!-- Address Form -->
-            <img src="/assets/images/silver-d.png" width="17px" id="img-receiver">
+            <img src="/assets/images/silver-d.png" width="17px" id="img-search">
             <form onsubmit="searchPlaces(); return false;">
                 <input type="text" id="keyword" value="제주대학교" size="60" style="width:50%">
                 <button type="submit" id="receiver_btn">검색</button>
+                <button type="submit">현재위치</button>
             </form>
         </div>
         <hr>
