--- a/assets/html/sender_address_popup.html
+++ b/assets/html/sender_address_popup.html
@@ -19,8 +19,8 @@
         </div>
         <hr>
 
-        <div class="js-placewrapper css-placewrapper"></div>
-        <div id="map" class= "map" style="width:100%;height:350px;"></div>
+        <div class="js-placewrapper css-placewrapper"><div id="map" class= "map" style="width:100%;height:350px;"></div></div>
+        
         <script
             type="text/javascript"
             src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d5a0cfc898b4333b701a26737da1fde7&libraries=services"></script>
