--- a/assets/html/sender_address_popup.html
+++ b/assets/html/sender_address_popup.html
@@ -19,7 +19,7 @@
         </div>
         <hr>
 
-        <div class="js-placewrapper css-placewrapper"><div id="map" class= "map" style="width:100%;height:350px;"></div></div>
+        <div class="js-placewrapper css-placewrapper"><div id="map" class= "map" ></div></div>
         <div id="result"></div>
         <script
             type="text/javascript"
