지도 toggle 및 지도 범위 재설정
지도 -> block 위치만 바꾸면 됨.

--- a/assets/html/sender_address_popup.html
+++ b/assets/html/sender_address_popup.html
@@ -19,7 +19,8 @@
         </div>
         <hr>
 
-        <div class="js-placewrapper css-placewrapper"><div id="map" class= "map" style="display: none;" ></div></div>
+        
+        <div class="js-placewrapper css-placewrapper"><div id="map" class= "map" style="display: block;" ></div></div>
         <div id="result"></div>
         <script
             type="text/javascript"
