--- a/assets/html/sender_address_popup.html
+++ b/assets/html/sender_address_popup.html
@@ -19,8 +19,10 @@
         </div>
         <hr>
 
-        
-        <div class="js-placewrapper css-placewrapper"><div id="map" class= "map" style="display: block;" ></div></div>
+        <div class="mainwrapper">
+            <div class="js-placewrapper css-placewrapper"></div>
+            <div id="map" class="map" style="display: block;"></div>
+        </div>
         <div id="result"></div>
         <script
             type="text/javascript"
