--- a/assets/html/sender_address_popup.html
+++ b/assets/html/sender_address_popup.html
@@ -5,7 +5,7 @@
         <meta
             name="viewport"
             content="width=device-width, initial-scale=1, user-scalable=no"/>
-        <meta name="description" content="배달지">
+        <meta name="description" content="가게명">
         <link rel="stylesheet" href="/assets/css/map.css">
     </head>
     <body>
