--- a/assets/html/receiver_address_popup.html
+++ b/assets/html/receiver_address_popup.html
@@ -25,14 +25,16 @@
         </div>
         <hr>
         
-        <div id="map" class= "map" style="display: block;" ></div> 
-        <div class="js-placewrapper css-placewrapper"></div>
+        <div class="mainwrapper">
+            <div class="js-placewrapper css-placewrapper"></div>
+            <div id="map" class="map" style="display: block;"></div>
+        </div>
         <div id="result"></div>
 
         <script
             type="text/javascript"
             src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d5a0cfc898b4333b701a26737da1fde7&libraries=services"></script>
-            <script type="text/javascript" src="/assets/js/map.js"></script>
+            <script type="text/javascript" src="/assets/js/receiver.js"></script>
             <!-- <script type="text/javascript" src="/assets/js/now.js"></script> -->
 
     </body>
