--- a/assets/html/sender_address_popup.html
+++ b/assets/html/sender_address_popup.html
@@ -13,7 +13,7 @@
             <!-- Address Form -->
             <img src="/assets/images/silver-d.png" id="img-search">
             <form onsubmit="searchPlaces(); return false;">
-                <input type="text" id="keyword" value="">
+                <input type="text" id="keyword" >
                 <button type="submit" id="receiver_btn">검색</button>
             </form>
         </div>
@@ -27,7 +27,7 @@
         <script
             type="text/javascript"
             src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d5a0cfc898b4333b701a26737da1fde7&libraries=services"></script>
-        <script type="text/javascript" src="/assets/js/map.js"></script>
+        <script type="text/javascript" src="/assets/js/sender.js"></script>
 
     </body>
 </html>
