--- a/assets/html/receiver_address_popup.html
+++ b/assets/html/receiver_address_popup.html
@@ -15,8 +15,8 @@
             <!-- Address Form -->
             <img src="/assets/images/gold-d.png" id="img-search">
             <form onsubmit="searchPlaces(); return false;">
-                <input type="text" id="keyword" value="제주대학교">
-                <button type="submit" id="receiver_btn">검색</button>
+                <input type="text" id="keyword" >
+                <button type="submit" id="receiver_btn" >검색</button>
             </form>
 
             <!-- <form onsubmit="now(); return false;">
