팝업창 재검색 기능 추가

--- a/assets/html/receiver_address_popup.html
+++ b/assets/html/receiver_address_popup.html
@@ -26,7 +26,7 @@
         <hr>
         
         <div class="mainwrapper">
-            <div class="js-placewrapper css-placewrapper"></div>
+            <ul class="js-placewrapper css-placewrapper"></ul>
             <div id="map" class="map" style="display: block;"></div>
         </div>
         <div id="result"></div>
