팝업창 페이지 번호 부여

--- a/assets/html/receiver_address_popup.html
+++ b/assets/html/receiver_address_popup.html
@@ -26,7 +26,11 @@
         <hr>
         
         <div class="mainwrapper">
-            <ul class="js-placewrapper css-placewrapper"></ul>
+            <div class="mainwrapper_content">
+                <ul class="js-placewrapper css-placewrapper"></ul>
+                <div id="pagination"></div>
+            </div>
+           
             <div id="map" class="map" style="display: block;"></div>
         </div>
         <div id="result"></div>
