--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             km</br>
     </div>
     <div>
-        추가 배달비: &nbsp;<span id="fee"></span>
+        추가 배달비: &nnbsp;<span id="fee"></span>
         원</br>
 </div>
 </center>
