사라진 부분 수정 및 타이틀 위치 보완

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 					                            800px"
             src="/assets/images/title01.png"
             alt="title-팁의민족"
-            style="display: block; margin: 0px auto 0px auto;/" />
+            style="display: block;
+            margin: 150px auto 0px auto;/" />
         <link rel="stylesheet" href="/assets/css/tipEthnic.css"/>
     </head>
 
@@ -44,13 +45,8 @@
             <input type="text" id="receiver" readonly="readonly">
             <button type="button" onclick="javascript:goPopup2();">
                 검색</button>
-<<<<<<< HEAD
             <button type="button" onclick="">
                 현위치로</button><br/>
-=======
-            <!-- <button type="button" class="nowBtn">현재위치</button>     -->
-                <br/>
->>>>>>> b8fb1660df0d0b42f0f90c519185b1146dc67aa3
             <br>
 
                 <!--Delivery fee Calculation-->
@@ -59,36 +55,18 @@
             </br>
         </br>
 
-        <div>
-            거리: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <span id="distance"></span>
-            km</br>
-    </div>
-    <div>
-        추가 배달비: &nnbsp;<span id="fee"></span>
-        원</br>
-</div>
-
         <div id="result"></div>
-		<br>
-		<div class="ft_area">
-		</div>
-			<div class="map_act_btn_wrap clear_box"></div>
-			<div class="clear"></div>
-		</div>
+		      <br>
+		    <div class="ft_area"></div>
+			  <div class="map_act_btn_wrap clear_box"></div>
+			  <div class="clear"></div>
+		    </div>
 
-		<div id="map_wrap" class="map_wrap">
-			<div id="map_div"></div>
-		</div>
-		<div class="map_act_btn_wrap clear_box"></div>
+		    <div id="map_wrap" class="map_wrap">
+			  <div id="map_div"></div>
+		    </div>
+		    <div class="map_act_btn_wrap clear_box"></div>
 
-		<br />
-<<<<<<< HEAD
-
-
-=======
- 
->>>>>>> b8fb1660df0d0b42f0f90c519185b1146dc67aa3
 </center>
 
 <!-- Scripts -->
