--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <link rel="stylesheet" href="/assets/css/tipEthnic.css"/>
     </head>
     
-	<body onload="default_map();">
+	<body onload="now_map();">
 
         <!-- Address Form -->
         <center>
@@ -69,10 +69,12 @@
 
 <script src="/assets/js/main.js"></script>
 <script src="/assets/js/disCal.js"></script>
+<script src="/assets/js/now.js"></script>
 <script
             type="text/javascript"
             src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d5a0cfc898b4333b701a26737da1fde7"></script>
 <script	src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="https://apis.openapi.sk.com/tmap/jsv2?version=1&appKey=l7xxd89e57a2e4c84165b7661e4884dc603d"></script>
+
 </body>
 </html>
