--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
 
 <!-- Scripts -->
 <script src="/assets/js/main.js"></script>
-<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d5a0cfc898b4333b701a26737da1fde7&libraries=services"></script>
-<script src="/assets/js/now.js"></script>
+<!-- <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d5a0cfc898b4333b701a26737da1fde7&libraries=services"></script>
+<script src="/assets/js/now.js"></script> -->
 
 <script src="/assets/js/disCal.js"></script>
 <script
