현위치(좌표)설정 기능 및 기준 거리 입력 기능 추가

--- a/assets/html/receiver_address_popup.html
+++ b/assets/html/receiver_address_popup.html
@@ -13,7 +13,7 @@
             <!-- Address Form -->
             <img src="/assets/images/silver-d.png" id="img-search">
             <form onsubmit="searchPlaces(); return false;">
-                <input type="text" id="keyword" value="카카오 판교">
+                <input type="text" id="keyword" value="">
                 <button type="submit" id="receiver_btn">검색</button>
             </form>
         </div>
