--- a/assets/html/sender_address_popup.html
+++ b/assets/html/sender_address_popup.html
@@ -14,7 +14,7 @@
             <img src="/assets/images/gold-d.png" id="img-search">
             <form onsubmit="searchPlaces(); return false;">
 
-            <input type="text" id="keyword" value="현대백화점 판교점" >
+            <input type="text" id="keyword" value="" >
 
                 <button type="submit" id="receiver_btn">검색</button>
             </form>
