--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
 
             <!-- Address Form -->
-            <center>
+            <section>
                 <div class="input_wrapper" style="margin-bottom: 2em;">
                     <div class="explain">
                         <p>이 사이트는 배달 거리가 2km 이상일 때, 100m당 100원을 추가 배달비로 산정합니다.</p>
@@ -66,7 +66,7 @@
                     </div>
 
                     <div class="cal">
-                        <button type="button" id="Delivery-fee-Calculation">
+                        <button type="button" id="Delivery-fee-Calculation" style="margin-top: 1em;">
                             추가 배달비 조회</button>
                     </div>
                 </div>
@@ -85,7 +85,7 @@
                     <!-- <div class="map_act_btn_wrap clear_box"></div> -->
                 </div>
 
-            </center>
+            </section>
         </div>
         <!-- Scripts -->
         <script src="/assets/js/main.js"></script>
