css 반응형 수정 1차

--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
                             검색</button><br/>
                     </div>
 
-                    <div class="receiver" >
+                    <div class="receiver" style="margin-left:2em;" >
                         <span>배달 받을 위치</span>
                         <img src="/assets/images/silver-d.png" width="17px"/>
                         <input type="text" id="receiver" readonly="readonly" ">
                         <button type="button" onclick="javascript:goPopup2();">
                             검색</button>
                         <button type="button" id="setnow">
-                            현위치로</button><br/>
+                            현위치</button><br/>
                     </div>
 
                     <!--거리 입력-->
@@ -67,7 +67,7 @@
 
                     <div class="cal">
                         <button type="button" id="Delivery-fee-Calculation" style="margin-top: 1em;">
-                            추가 배달비 조회</button>
+                            조회</button>
                     </div>
                 </div>
 
