--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                     <div class="distance" style="margin-top: 2em;">
                         <form onsubmit="send_maginot(); return false;">
                             <input type="text" id="maginot" style="width: 6em;">
+                            <span>km</span>
                         </form>
                     </div>
 
@@ -70,7 +71,6 @@
                             조회</button>
                     </div>
                 </div>
-
                 <div class="result_wrapper">
                     <div class="resultInfo">
                         <div id="result"></div>
