--- a/assets/html/receiver_address_popup.html
+++ b/assets/html/receiver_address_popup.html
@@ -7,6 +7,7 @@
             content="width=device-width, initial-scale=1, user-scalable=no"/>
         <meta name="description" content="배달 받을 장소.">
         <link rel="stylesheet" href="/assets/css/map.css">
+        <link rel="stylesheet" href="/assets/css/popup.css">
     </head>
     <body>
         <div class="css-search">
