--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <section>
                 <div class="input_wrapper" style="margin-bottom: 2em;">
                     <div class="explain">
-                        <p>이 사이트는 배달 거리가 2km 이상일 때, 100m당 100원을 추가 배달비로 산정합니다.</p>
+                        <p>이 사이트는 배달 거리가 입력한 거리(km) 이상일 때, 100m당 100원을 추가 배달비로 산정합니다.</p>
                     </div>
                     <div class="sender">
                         <span>가게 위치</span>
