--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
+        <title>팁의 민족 tipEthnic</title>
         <style>
             body {
                 height: 100vh;
