--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             content="width=device-width, initial-scale=1, user-scalable=no"/>
 
         <link rel="stylesheet" href="/assets/css/tipEthnic.css"/>
+        <link href="/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
     </head>
 
     <body onload="now_map();">
