--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -29,14 +29,14 @@
                 <div class="sender">
                     <label for="sender"><div>가게</div></label>
                     <input class="input_field sender_input" type="text" id="sender" readonly="readonly">
-                    <button type="button" onclick="javascript:goPopup();">검색</button>
+                    <button type="button" class="senderBtn">검색</button>
                 </div>
 
                 <div class="receiver">
                     <label for="receiver"><div>배달장소</div></label>
                     <input class="input_field receiver_input" type="text" id="receiver" readonly="readonly" >
-                    <button type="button" onclick="javascript:goPopup2();">검색</button>
-                    <button type="button" id="setnow">현위치</button>
+                    <button class="receiverBtn" type="button">검색</button>
+                    <button type="button" class="nowBtn">현위치</button>
                 </div>
 
                 <!--거리 입력-->
