Style : code formatting

--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -35,7 +35,7 @@
                 <div class="receiver">
                     <label for="receiver"><div>배달장소</div></label>
                     <input class="input_field receiver_input" type="text" id="receiver" readonly="readonly" >
-                    <button class="receiverBtn" type="button">검색</button>
+                    <button class="receiverBtn searchBtn" type="button">검색</button>
                     <button type="button" class="nowBtn">현위치</button>
                 </div>
 
