Fix : button css 파일 분리

--- a/assets/html/receiver_address_popup.html
+++ b/assets/html/receiver_address_popup.html
@@ -7,11 +7,11 @@
             content="width=device-width, initial-scale=1, user-scalable=no"/>
         <meta name="description" content="배달 받을 장소.">
         <link rel="stylesheet" href="/assets/css/map.css">
+        <link rel="stylesheet" href="../css/button.css">
     </head>
     <body>
         <div class="css-search">
             <!-- Address Form -->
-            <img src="/assets/images/silver-d.png" id="img-search">
             <form onsubmit="searchPlaces(); return false;">
                 <input type="text" id="keyword" value="">
                 <button type="submit" id="receiver_btn">검색</button>
