--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
             name="viewport"
             content="width=device-width, initial-scale=1, user-scalable=no"/>
         <link rel="stylesheet" href="./assets/css/main.css">
-        <!-- <link rel="stylesheet" href="./assets/css/map.css"> -->
+        <link rel="stylesheet" href="./assets/css/button.css">
     </head>
 
     <body>
